Bug 1914687 - Make sure arrowscrollbox buttons draw on top of scroller. r=dao,desktop-theme-reviewers
In bug 1913322 I tweaked the approach we use to maintain layout
stability when showing and hiding these so that the scrollbox overlaps
them (before we used to have an extra clip).

The DOM order is scrollbutton-up, scrollbox, scrollbutton-down, but we
need to make sure that the scrollbutton-up paint on top of the
scrollbox, otherwise it won't be hittable.

Differential Revision: https://phabricator.services.mozilla.com/D220080

--- a/toolkit/themes/shared/arrowscrollbox.css
+++ b/toolkit/themes/shared/arrowscrollbox.css
@@ -28,6 +28,9 @@ toolbarbutton {
   fill: currentColor;
   fill-opacity: 1;
   padding: 2px;
+  /* Make sure we draw on top of our scrollbox, since otherwise the up button
+   * won't be hittable */
+  position: relative;
 
   &[disabled] {
     fill-opacity: var(--toolbarbutton-disabled-opacity);
